# burnmeter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  components.json  package.json  pnpm-lock.yaml  promo.json  prototype.html  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
docs/launch/: copy.md
docs/screenshots/: take-screenshots.sh
docs/superpowers/plans/: 2026-03-27-claude-desktop-auth.md  2026-03-27-dynamic-promo-config.md
docs/superpowers/specs/: 2026-03-27-claude-desktop-auth-design.md  2026-03-27-dynamic-promo-config-design.md
src/: App.test.ts  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  api.rs  codex.rs  desktop_credentials.rs  keychain.rs  lib.rs  main.rs  tray.rs
src/components/: ActivityHeatmap.tsx  AsciiProgressBar.tsx  BurnmeterWordmark.tsx  ClaudeMark.tsx  ConnectScreen.tsx  Header.tsx  PromoTimer.tsx  ProviderBoosts.tsx  ProviderLogo.tsx  QuickInfo.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  UsageLimits.tsx
src/components/charts/: gauge.tsx
src/hooks/: usePromoConfig.ts  usePromoStatus.ts  useUsageData.ts
src/lib/: constants.ts  format.test.ts  format.ts  promo.test.ts  promo.ts  usageErrors.ts
src/styles/: crt.css  global.css  theme.css
src/types/: promo.ts  usage.ts
