[package]
name = "claude-x2-tracker"
version = "0.2.2"
description = "Claude X2 Tracker - macOS menu bar app for Claude usage tracking"
authors = ["Claude X2 Contributors"]
edition = "2021"

[lib]
name = "claude_x2_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
dirs-next = "2"
chrono = { version = "0.4", features = ["serde"] }
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["hmac"] }
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }
